--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -49,12 +52,14 @@
       <section>
         <h1 hidden>Our projects</h1>
         <ul class="list">
-          <li><button type="button" class="ptf-btn">All</button></li>
-          <li><button type="button" class="ptf-btn">Web Site</button></li>
-          <li><button type="button" class="ptf-btn">App</button></li>
-          <li><button type="button" class="ptf-btn">Design</button></li>
-          <li><button type="button" class="ptf-btn">Marketing</button></li>
+          <div class="conteiner"><li class="items"><button type="button" class="ptf-btn">All</button></li>
+            <li class="items"><button type="button" class="ptf-btn">Web Site</button></li>
+            <li class="items"><button type="button" class="ptf-btn">App</button></li>
+            <li class="items"><button type="button" class="ptf-btn">Design</button></li>
+            <li class="items"><button type="button" class="ptf-btn">Marketing</button></li></div>
         </ul>
+
+        <!-- Works -->
 
         <ul class="list">
           <li>
