--- a/portfolio.html
+++ b/portfolio.html
@@ -20,43 +20,57 @@
   <body>
     <!-- Header -->
     <header>
-      <nav>
-        <a href="./index.html" class="link logo"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="list">
-          <li><a href="./index.html" class="link menu-link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="link menu-link">Portfolio</a>
-          </li>
-          <li><a href="" class="link menu-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link contacts-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link contacts-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container main-nav">
+        <nav>
+          <a href="./index.html" class="link logo"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="list site-nav">
+            <li class="item"><a href="./index.html" class="link menu-link">Studio</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link menu-link">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="link menu-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts ">
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link contacts-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+110001111111" class="link contacts-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main -->
     <main>
       <section>
         <h1 hidden>Our projects</h1>
-        <ul class="list">
-          <div class="conteiner"><li class="items"><button type="button" class="ptf-btn">All</button></li>
-            <li class="items"><button type="button" class="ptf-btn">Web Site</button></li>
-            <li class="items"><button type="button" class="ptf-btn">App</button></li>
-            <li class="items"><button type="button" class="ptf-btn">Design</button></li>
-            <li class="items"><button type="button" class="ptf-btn">Marketing</button></li></div>
+        <ul class="list ">
+         
+            <li class="items">
+              <button type="button" class="ptf-btn btn">All</button>
+            </li>
+            <li class="items">
+              <button type="button" class="ptf-btn btn">Web Site</button>
+            </li>
+            <li class="items">
+              <button type="button" class="ptf-btn btn">App</button>
+            </li>
+            <li class="items">
+              <button type="button" class="ptf-btn btn">Design</button>
+            </li>
+            <li class="items">
+              <button type="button" class="ptf-btn btn">Marketing</button>
+            </li>
+          
         </ul>
 
         <!-- Works -->
