--- a/index.html
+++ b/index.html
@@ -11,73 +11,82 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
-      <nav>
+      <div class="container main-nav">
+        <nav>
         
-        <a href="./index.html" class="link logo"
-          >Web<span class="logo-header">Studio</span></a
-        >
-        <ul class="list">
-          <li><a href="./index.html" class="link menu-link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="link menu-link">Portfolio</a>
-          </li>
-          <li><a href="" class="link menu-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link contacts-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link contacts-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+          <ul class="list site-nav">
+            <li class="item"><div class="nav-logo">
+              <a href="./index.html" class="link logo"
+              >Web<span class="logo-header">Studio</span></a
+            ></div>
+            </li>
+            <li class="item">
+              <a href="./index.html" class="link menu-link">Studio</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link menu-link">Portfolio</a>
+            </li>
+            <li class="item"><a href="" class="link menu-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="list site-nav">
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link contacts-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="item">
+              <a href="tel:+110001111111" class="link contacts-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- Main -->
     <main>
       <!-- Hero -->
-      <section class="hero">
+      <section class="hero container">
         <h1 class="hero-titel">Effective Solutions for Your Business</h1>
         <button type="button" class="btn">Order Service</button>
       </section>
       <!-- Advantages -->
-      <section>
-        <h2 hidden class="preference">Advantages</h2>
-        <ul class="list">
-          <li>
+      <section class="container">
+        <h2 class="visually-hidden">Advantages</h2>
+        <ul class="list advantages-list">
+          <li class="advantages-items">
             <h3 class="titel">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="advantages-items">
             <h3 class="titel">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="advantages-items">
             <h3 class="titel">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="advantages-items">
             <h3 class="titel">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a
@@ -87,10 +96,10 @@
         </ul>
       </section>
       <!-- What are we doing -->
-      <section>
+      <section class="container">
         <h2 class="heading">What are we doing</h2>
-        <ul class="list">
-          <li>
+        <ul class="list works-ex">
+          <li class="works-ex-item">
             <img
               src="./images/computer.jpg"
               alt="Website on desktop"
@@ -98,7 +107,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="works-ex-item">
             <img
               src="./images/mobil.jpg"
               alt="Website on smartphone"
@@ -106,7 +115,7 @@
               height="300"
             />
           </li>
-          <li>
+          <li class="works-ex-item">
             <img
               src="./images/both.jpg"
               alt="Website on both devices"
@@ -117,9 +126,10 @@
         </ul>
       </section>
       <!-- Our Team -->
-      <section class="team-section">
+      <section class="team-section container">
         <h2 class="heading">Our Team</h2>
-        <ul class="list">
+
+        <ul class="list team-list">
           <li class="team-list-item">
             <img
               src="./images/mark.jpg"
