--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     <header>
       <div class="container main-nav">
         <nav>
-        
           <ul class="list site-nav">
-            <li class="item"><div class="nav-logo">
-              <a href="./index.html" class="link logo"
-              >Web<span class="logo-header">Studio</span></a
-            ></div>
+            <li class="item">
+              <div class="nav-logo">
+                <a href="./index.html" class="link logo"
+                  >Web<span class="logo-header">Studio</span></a
+                >
+              </div>
             </li>
             <li class="item">
               <a href="./index.html" class="link menu-link">Studio</a>
@@ -175,7 +176,8 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer class="footer container">
+      <div class="footer-container">
       <a href="./index.html" class="link logo"
         >Web<span class="logo-footer">Studio</span></a
       >
@@ -183,6 +185,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
   </body>
 </html>
