--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       rel="stylesheet"
     />
     <link
+      href="
+    https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
+    "
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -176,16 +178,16 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer container">
-      <div class="footer-container">
-      <a href="./index.html" class="link logo"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="link logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
