--- a/portfolio.html
+++ b/portfolio.html
@@ -12,41 +12,39 @@
       rel="stylesheet"
     />
     <link
+      href="
+    https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
+    "
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header">
       <div class="container main-nav">
-        <nav>
-          <ul class="list site-nav">
-            <li class="item">
-              <div class="nav-logo">
-                <a href="./index.html" class="link logo"
-                  >Web<span class="logo-header">Studio</span></a
-                >
-              </div>
-            </li>
-            <li class="item">
+        <nav class="site-nav">
+          <a href="./index.html" class="link logo nav-logo"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="list nav-list">
+            <li>
               <a href="./index.html" class="link menu-link">Studio</a>
             </li>
-            <li class="item">
+            <li>
               <a href="./portfolio.html" class="link menu-link">Portfolio</a>
             </li>
-            <li class="item"><a href="" class="link menu-link">Contacts</a></li>
+            <li><a href="" class="link menu-link">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
           <ul class="list site-nav">
-            <li class="item">
+            <li class="contacts-item">
               <a href="mailto:info@devstudio.com" class="link contacts-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="item">
+            <li class="contacts-item">
               <a href="tel:+110001111111" class="link contacts-link"
                 >+11 (000) 111-11-11</a
               >
@@ -81,137 +79,139 @@
 
         <ul class="list works-list">
           <div class="works-container">
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/bankingapp.jpg"
-                alt="Banking app on phone display"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Banking App Interface Concept</h2>
-              <p class="desc">App</p>
-            </a>
-          </li>
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/bankingapp.jpg"
+                  alt="Banking app on phone display"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Banking App Interface Concept</h2>
+                <p class="desc">App</p>
+              </a>
+            </li>
 
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/payment.jpg"
-                alt="Application for non-cash payments"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Cashless Payment</h2>
-              <p class="desc">Marketing</p>
-            </a>
-          </li>
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/payment.jpg"
+                  alt="Application for non-cash payments"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Cashless Payment</h2>
+                <p class="desc">Marketing</p>
+              </a>
+            </li>
 
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/meditationapp.jpg"
-                alt="Meditation application for all devices"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Meditation App</h2>
-              <p class="desc">App</p>
-            </a>
-          </li>
-        </div>
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/meditationapp.jpg"
+                  alt="Meditation application for all devices"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Meditation App</h2>
+                <p class="desc">App</p>
+              </a>
+            </li>
+          </div>
 
-        <div class="works-container">
-        <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/taxiservice.jpg"
-                alt="Taxi service application for phones"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Taxi Service</h2>
-              <p class="desc">Marketing</p>
-            </a>
-          </li>
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/screenillustrations.jpg"
-                alt="Screen illustrations for your phone"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Screen Illustrations</h2>
-              <p class="desc">Design</p>
-            </a>
-          </li>
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/onlinecourses.jpg"
-                alt="Young lady with earphones"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Online Courses</h2>
-              <p class="desc">Marketing</p>
-            </a>
-          </li>
-        </div>
+          <div class="works-container">
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/taxiservice.jpg"
+                  alt="Taxi service application for phones"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Taxi Service</h2>
+                <p class="desc">Marketing</p>
+              </a>
+            </li>
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/screenillustrations.jpg"
+                  alt="Screen illustrations for your phone"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Screen Illustrations</h2>
+                <p class="desc">Design</p>
+              </a>
+            </li>
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/onlinecourses.jpg"
+                  alt="Young lady with earphones"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Online Courses</h2>
+                <p class="desc">Marketing</p>
+              </a>
+            </li>
+          </div>
 
-        <div class="works-container">
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/storiesconcept.jpg"
-                alt="Instagram stories concept"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Instagram Stories Concept</h2>
-              <p class="desc">Design</p>
-            </a>
-          </li>
+          <div class="works-container">
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/storiesconcept.jpg"
+                  alt="Instagram stories concept"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Instagram Stories Concept</h2>
+                <p class="desc">Design</p>
+              </a>
+            </li>
 
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/organicfood.jpg"
-                alt="Women with vegetable"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Organic Food</h2>
-              <p class="desc">Web Site</p>
-            </a>
-          </li>
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/organicfood.jpg"
+                  alt="Women with vegetable"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Organic Food</h2>
+                <p class="desc">Web Site</p>
+              </a>
+            </li>
 
-          <li class="works-item">
-            <a href="" class="link portfolio-link">
-              <img
-                src="./images/portfolio/freshcoffee.jpg"
-                alt="Barista making a cappuccino"
-                width="360"
-                height="360"
-              />
-              <h2 class="caption">Fresh Coffee</h2>
-              <p class="desc">Web Site</p>
-            </a>
-          </li>
-        </div>
+            <li class="works-item">
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/freshcoffee.jpg"
+                  alt="Barista making a cappuccino"
+                  width="360"
+                  height="360"
+                />
+                <h2 class="caption">Fresh Coffee</h2>
+                <p class="desc">Web Site</p>
+              </a>
+            </li>
+          </div>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer class="footer container">
-      <a href="./index.html" class="link logo"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="footer">
+      <div class="container">
+        <a href="./index.html" class="link logo"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
