--- a/index.html
+++ b/index.html
@@ -12,43 +12,39 @@
       rel="stylesheet"
     />
     <link
+      rel="stylesheet"
       href="
     https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
     "
-      rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="header">
       <div class="container main-nav">
-        <nav>
-          <ul class="list site-nav">
-            <li class="item">
-              <div class="nav-logo">
-                <a href="./index.html" class="link logo"
-                  >Web<span class="logo-header">Studio</span></a
-                >
-              </div>
-            </li>
-            <li class="item">
+        <nav class="site-nav">
+          <a href="./index.html" class="link logo nav-logo"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <ul class="list nav-list">
+            <li>
               <a href="./index.html" class="link menu-link">Studio</a>
             </li>
-            <li class="item">
+            <li>
               <a href="./portfolio.html" class="link menu-link">Portfolio</a>
             </li>
-            <li class="item"><a href="" class="link menu-link">Contacts</a></li>
+            <li><a href="" class="link menu-link">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
           <ul class="list site-nav">
-            <li class="item">
+            <li class="contacts-item">
               <a href="mailto:info@devstudio.com" class="link contacts-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="item">
+            <li class="contacts-item">
               <a href="tel:+110001111111" class="link contacts-link"
                 >+11 (000) 111-11-11</a
               >
