--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
     <!-- Main -->
     <main>
       <!-- Hero -->
-      <section class="hero container">
-        <h1 class="hero-titel">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn">Order Service</button>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-titel">Effective Solutions for Your Business</h1>
+          <button type="button" class="btn">Order Service</button>
+        </div>
       </section>
       <!-- Advantages -->
-      <section class="container">
+      <section class="advantages">
+        <div class="container">
         <h2 class="visually-hidden">Advantages</h2>
         <ul class="list advantages-list">
           <li class="advantages-items">
@@ -93,6 +96,7 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <!-- What are we doing -->
       <section class="container">
