--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     />
     <link
       rel="stylesheet"
-      href="
-    https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
-    "
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -65,41 +66,42 @@
       <!-- Advantages -->
       <section class="advantages">
         <div class="container">
-        <h2 class="visually-hidden">Advantages</h2>
-        <ul class="list advantages-list">
-          <li class="advantages-items">
-            <h3 class="titel">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="advantages-items">
-            <h3 class="titel">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="advantages-items">
-            <h3 class="titel">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="advantages-items">
-            <h3 class="titel">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </div>
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="list advantages-list">
+            <li class="advantages-items">
+              <h3 class="titel">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="advantages-items">
+              <h3 class="titel">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="advantages-items">
+              <h3 class="titel">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="advantages-items">
+              <h3 class="titel">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- What are we doing -->
-      <section class="container">
+      <section class="works">
+        <div class="container">
         <h2 class="heading">What are we doing</h2>
         <ul class="list works-ex">
           <li class="works-ex-item">
@@ -127,9 +129,11 @@
             />
           </li>
         </ul>
+      </div>
       </section>
       <!-- Our Team -->
-      <section class="team-section container">
+      <section class="team-section">
+        <div class="container">
         <h2 class="heading">Our Team</h2>
 
         <ul class="list team-list">
@@ -174,13 +178,14 @@
             <p class="team-listi-text">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="link logo"
+        <a href="./index.html" class="link logo logo-dark"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-text">
