--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,10 @@
     />
     <link
       rel="stylesheet"
-      href="
-    https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
-    "
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -55,8 +56,9 @@
     </header>
     <!-- Main -->
     <main>
-      <section class="container">
-        <h1 hidden>Our projects</h1>
+      <section class="portfolio-container">
+        <h1 class="visually-hidden">Our projects</h1>
+<div class="container">
         <ul class="list button-list">
           <li class="items">
             <button type="button" class="ptf-btn">All</button>
@@ -193,6 +195,7 @@
             </a>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!-- Footer -->
