--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <address class="contacts">
-          <ul class="list site-nav">
+          <ul class="list nav-contacts">
             <li class="contacts-item">
               <a href="mailto:info@devstudio.com" class="link contacts-link"
                 >info@devstudio.com</a
@@ -193,7 +193,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="link logo logo-dark"
+        <a href="./index.html" class="link  logo-dark"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-text">
