--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="link logo"
+        <a href="./index.html" class="link logo-dark"
           >Web<span class="logo-footer">Studio</span></a
         >
         <p class="footer-text">
