--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <address class="contacts">
-          <ul class="list site-nav">
+          <ul class="list nav-contacts">
             <li class="contacts-item">
               <a href="mailto:info@devstudio.com" class="link contacts-link"
                 >info@devstudio.com</a
